# montagem-808

./: CHANGELOG.md  CMakeLists.txt  INSTALL_Mac.txt  INSTALL_Windows.txt  README.md  TERMS.txt
.github/workflows/: release.yml
Source/: E808LookAndFeel.h  E808Processor.cpp  E808Processor.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp
